Bug 233690 - Scaling of animated brushes (gih) is broken
Summary: Scaling of animated brushes (gih) is broken
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 233695 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-04-08 07:23 UTC by Cyrille Berger
Modified: 2010-04-10 17:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cyrille Berger 2010-04-08 07:23:31 UTC
When size is enabled with an animated brush, not only it does not scale, but worse it seems to introduce an offset.
Comment 1 Sven Langkamp 2010-04-08 13:12:19 UTC
*** Bug 233695 has been marked as a duplicate of this bug. ***
Comment 2 Cyrille Berger 2010-04-10 17:09:44 UTC
SVN commit 1113353 by berger:

Fix: scaling of animated brushes.

BUG:233690


 M  +2 -2      kis_imagepipe_brush.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1113353