Fix: scaling of animated brushes.

BUG:233690

svn path=/trunk/koffice/; revision=1113353